main.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

body, button {
    font-family: 'Inter', sans-serif;
}

body {
    display: flex;
    flex-direction: row;
    margin: 0;
    padding: 0;
    width: 100%;
    background-color: #fff9ec;
}

#content {
    flex-grow: 1;
    max-width: 100vw;
}

#header {
    margin: 16px;
    display: flex;
    justify-content: flex-start;
}

#header .logo {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-grow: 1;
}

#header .logo img {
    height: 40px;
    width: auto;
    margin-right: 10px;
}

#header .logo h1 {
    margin: 0;
    text-align: center;
    font-weight: 900;
    font-style: italic;
}

nav {
    display: flex;
    flex-direction: column;
    background-color: #ffe79e;
    height: 100vh;
    z-index: 30;
}

nav a {
    display: flex;
    align-items: center;
    flex-direction: column;
    margin: 10px;
    text-decoration: none;
    color: black;
}

nav a p {
    font-size: 14px;
    margin: 0;
}

nav a .navIcon {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #fad522;
    border-radius: 10px;
    margin-bottom: 5px;
}

nav a:hover {
    .navIcon {
        background-color: #dfb700;
    }
}

nav a .navIcon svg {
    display: block;
    margin: 2px 16px;
    fill: black;
    height: 20px;
}


main {
    width: 100%;
    max-width: 800px;
    margin: 0 auto;
    padding: 1rem;
    display: flex;
    flex-direction: column;
    min-height: 80vh;
    box-sizing: border-box;
}

main h2, main h3 {
    margin-top: 0;
}

.fab {
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    bottom: 20px;
    right: 20px;
    width: 56px;
    height: 56px;
    background-color: #fad522;
    color: #fff;
    border: none;
    border-radius: 50%;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
    font-size: 24px;
    cursor: pointer;
}

.fab svg {
    fill: black;
}

.fab:hover {
    filter: brightness(90%);
}

.sessionModal {
    border: none;
    border-radius: 8px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
    padding: 10px;
    width: 300px;
}

.sessionModal p {
    margin: 0;
    padding: 0;
}

.sessionModal .closeButton {
    position: absolute;
    top: 10px;
    right: 10px;
    background: none;
    border: none;
    cursor: pointer;
    font-size: 24px;
    color: black;
}

.sessionModal form fieldset {
    border: none;
    padding: 0;
    margin: 0;
}

.sessionModal form label {
    display: block;
    margin-top: 10px;
    font-size: 14px;
    font-weight: 600;
}

.sessionModal form input {
    padding: 5px;
    margin-top: 5px;
    border: 1px solid #ddd;
    border-radius: 4px;
}

.sessionModal .modalInputError {
    display: flex;
    align-items: center;
    color: red;
    font-size: 12px;
    margin-top: 5px;
}

.sessionModal .modalInputError svg {
    fill: red;
    margin-right: 5px;
}

.sessionModal form button {
    display: flex;
    margin-top: 10px;
    padding: 5px 10px;
    border: none;
    border-radius: 4px;
    background-color: #fad522;
    color: black;
    cursor: pointer;
    font-size: 16px;
    align-items: center;
}

.sessionModal form #deleteSessionButton {
    background-color: red;
}

.sessionModal form button svg {
    fill: black;
    margin-right: 5px;
}

dialog h2 {
    margin-top: 0;
}

dialog::backdrop {
    background: rgba(0, 0, 0, 0.5);
}

#pastSessionsList {
    display: flex;
    flex-direction: column;
    list-style: none;
    padding: 0;
    margin: 0;
}

#pastSessionsList li:first-child {
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
}

#pastSessionsList li:last-child {
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
    border-bottom: 1px solid #ddd;
}

#pastSessionsList .sessionItemContainer {
    display: block;
    border: 1px solid #ddd;
    border-bottom: none;
    background-color: #fff;
}

#pastSessionsList .sessionItemContainer p {
    margin: 16px;
}

#pastSessionsList .sessionItemContainer .sessionInfo {
    display: flex;
    justify-content: space-between;
    align-items: center;
    /*overflow: scroll;*/
}

#pastSessionsList .sessionItemContainer .sessionInfo p {
    white-space: nowrap;
}

#pastSessionsList .sessionItemContainer .sessionInfo .sessionEditButton {
    height: 24px;
    width: auto;
    margin: 16px;
    background: none;
    border: none;
    cursor: pointer;
    font-size: 24px;
    color: black;
}

#pastSessionsList .sessionItemContainer .sessionInfo .sessionEditButton svg {
    fill: black;
}

.toast {
    position: fixed;
    left: 50%;
    bottom: 20px;
    transform: translateX(-50%);
    padding: 12px 16px;
    border-radius: 4px;
    display: flex;
    align-items: center;
    gap: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    z-index: 10;
    opacity: 0;
    color: white;
}

.toast svg {
    fill: white;
}

.toast p {
    margin: 0;
}

.toast-enter {
    animation: toastFadeIn 0.5s forwards;
}

.toast-exit {
    animation: toastFadeOut 0.5s forwards;
}

@keyframes toastFadeIn {
    from {
        opacity: 0;
        transform: translate(-50%, 20px);
    }
    to {
        opacity: 1;
        transform: translate(-50%, 0);
    }
}

@keyframes toastFadeOut {
    from {
        opacity: 1;
        transform: translate(-50%, 0);
    }
    to {
        opacity: 0;
        transform: translate(-50%, 20px);
    }
}

.settingsButton {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 16px;
    border: 1px solid #ddd;
    background-color: #fff;
    border-radius: 8px;
    font-size: 16px;
    cursor: pointer;
    margin-bottom: 8px;
    text-decoration: none;
    color: black;
}

.settingsButton svg {
    fill: black;
    margin-right: 8px;
}

#deleteAllDataButton {
    background-color: #ff2b2b;
    color: white;
}

#deleteAllDataButton svg {
    fill: white;
}

/* Mobile */
@media (max-width: 840px) {
    main {
        max-width: 100%;
    }

    nav {
        position: fixed;
        bottom: 0;
        display: flex;
        flex-direction: row;
        background-color: #ffe79e;
        height: 60px;
        width: 100vw;
        padding-bottom: 15px;
    }

    nav a {
        flex-grow: 1;
        justify-content: center;
        align-items: center;
        flex-direction: column;
    }

    .fab {
        bottom: calc(20px + 60px + 15px);
        right: 20px;
    }

    .toast {
        bottom: calc(20px + 60px);
    }

    #content {
        margin-bottom: 60px;
    }

    #pastSessionsList .sessionItemContainer .sessionInfo {
        overflow: scroll;
    }
}

